refactor!: 精简为单体开发脚手架
