# pkg/platform/server/http.go
@@ -1,8 +1,6 @@
 package server
 
 import (
-	stdhttp "net/http"
-
 	"github.com/go-kratos/kratos/v3/middleware"
 	"github.com/go-kratos/kratos/v3/transport/http"
 
@@ -15,13 +13,9 @@ type HTTPRegistrar func(*http.Server)
 func NewHTTPServer(
 	c *config.Server,
 	ms []middleware.Middleware,
-	filters []http.FilterFunc,
 	registrars ...HTTPRegistrar,
 ) *http.Server {
 	opts := []http.ServerOption{http.Middleware(ms...)}
-	if len(filters) > 0 {
-		opts = append(opts, http.Filter(filters...))
-	}
 	if n := c.GetHttp().GetNetwork(); n != "" {
 		opts = append(opts, http.Network(n))
 	}
@@ -37,16 +31,4 @@ func NewHTTPServer(
 		register(srv)
 	}
 	return srv
-}
-
-// FileUploadLimitFilter prevents large bodies from reaching protobuf decoding.
-func FileUploadLimitFilter(maxBytes int64) http.FilterFunc {
-	return func(next stdhttp.Handler) stdhttp.Handler {
-		return stdhttp.HandlerFunc(func(w stdhttp.ResponseWriter, r *stdhttp.Request) {
-			if r.Method == stdhttp.MethodPost && r.URL.Path == "/v1/system/files:upload" {
-				r.Body = stdhttp.MaxBytesReader(w, r.Body, maxBytes)
-			}
-			next.ServeHTTP(w, r)
-		})
-	}
 }
